# Carely

./: .env.example  .gitignore  README.md  debug_button.py  install.sh  minimal_server.py  pyproject.toml  requirements.txt  test_button_direct.py  update.sh
audio_pipeline/: CMakeLists.txt
audio_pipeline/src/: amplitude_calc.h  apm_processor.cpp  apm_processor.h  ipc_server.cpp  ipc_server.h  main.cpp  pipewire_capture.cpp  pipewire_capture.h  pipewire_monitor.cpp  pipewire_monitor.h  ring_buffer.h  vad_detector.cpp  vad_detector.h
src/: __main__.py  audio_bridge.py  button_debug_server.py  config.py  fallback_agent.py  fsm.py  health.py  input_handler.py  keyword_spotter.py  main.py  stt_engine.py  tts_engine.py  ui_server.py  webhook_client.py
systemd/: carely-audio.service  carely-kiosk.service  carely.service
tests/: conftest.py  test_audio_mock.py  test_config.py  test_fallback_agent.py  test_fsm.py  test_input_handler.py  test_smoke.py  test_tts_engine.py  test_ui_server.py  test_webhook_schema.py
web_ui/: index.html  orb.js  style.css  ws_client.js
